--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
 body {
   font-family: Roboto, Helvetica, sans-serif;
   margin: 0;
-  background-color: #eee;
-}
-
-a {
-  text-decoration: none;
+  background-color: #e0fcfb;
 }
