--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ ul {
   background-color: rgba(0, 0, 0, 0.85);
 }
 
-#add-photo-modal {
+#create-post-modal {
   position: fixed;
   top: 0;
   bottom: 0;
