--- a/style.css
+++ b/style.css
@@ -104,12 +104,10 @@ a:hover {
   flex-wrap: wrap;
   padding: 10px;
   background-color: white;
-
-  /*big black line*/
   border: 10px solid;
   border-color: black;
-  /*background-color: lightGrey;*/
   border-color: white;
+  height: 400px;
 }
 
 article.genre-container {
@@ -117,12 +115,12 @@ article.genre-container {
   border: 5px solid black;
 }
 
-ul {
+/*ul {
   list-style-image:url('https://i3.wp.com/popcornfabrik.de/wp-content/uploads/2016/12/popcorn-icon.png');
   list-style-position: inside;
   padding: 0;
   margin: 0;
-}
+}*/
 
 .post{
   margin-left: 10px;
@@ -338,149 +336,3 @@ ul {
   font-size: 36px;
   font-weight: 400;
 }
-
-/*#add-post-button {
-  position: fixed;
-  right: 30px;
-  bottom: 30px;
-  height: 60px;
-  width: 60px;
-  border: none;
-  border-radius: 30px;
-  font-size: 30px;
-  background-color: #ee5e4b;
-  color: #fff;
-  cursor: pointer;
-  box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.25);
-}
-
-#add-post-button:hover,
-#add-post-button:focus {
-  right: 27px;
-  bottom: 27px;
-  height: 66px;
-  width: 66px;
-  border-radius: 33px;
-  font-size: 36px;
-  background-color: #ede328;
-}
-
-#add-post-button {
-  outline: none;
-}
-
-#modal-backdrop {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1000;
-  background-color: rgba(0, 0, 0, 0.85);
-}
-
-#create-post-modal {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1010;
-  overflow: scroll;
-}
-
-.hidden {
-  display: none;
-}
-
-.action-button {
-  font-size: 20px;
-  color: white;
-  padding: 10px;
-  background-color: #000;
-  border: 1px solid #ababab;
-  border-radius: 5px;
-  font-weight: lighter;
-  cursor: pointer;
-}
-
-.action-button:hover {
-  background-color: #e78477;
-  border-color: #333;
-}
-
-.modal-dialog {
-  width: auto;
-  max-width: 600px;
-  min-width: 350px;
-  min-height: 300px;
-  margin: 40px auto;
-  background-color: #fff;
-  border-radius: 15px;
-}
-
-.modal-header {
-  position: relative;
-  padding: 10px 20px;
-}
-
-.modal-header h3 {
-  margin: 0;
-  font-size: 28px;
-}
-
-#modal-close-button {
-  position: absolute;
-  right: 10px;
-  top: 5px;
-  font-size: 24px;
-  border: none;
-  background: none;
-  padding: 0;
-  cursor: pointer;
-}
-
-.modal-body {
-  padding: 20px;
-}
-
-.post-input-element {
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  margin: 10px 0;
-}
-
-.post-input-element > label {
-  font-weight: 600;
-  flex: 1 75px;
-  margin-right: 10px;
-}
-
-.post-input-element input {
-  flex: 6 200px;
-  padding: 8px;
-  font-size: 20px;
-  border: 1px solid #aaa;
-}
-
-.modal-footer {
-  display: flex;
-  justify-content: flex-end;
-  padding: 10px 10px 20px 10px;
-}
-
-#modal-cancel,
-#modal-accept {
-  margin-right: 20px;
-}
-
-#modal-cancel {
-  color: #333;
-  background-color: #fff;
-}
-
-#modal-cancel:hover {
-  background-color: #eee;
-}
-*/
