--- a/style.css
+++ b/style.css
@@ -152,7 +152,28 @@ article.genre-container {
   color: #454545
 }
 
-.rating {
+.star{
+  color: goldenrod;
+  font-size: 1.0rem;
+  padding: 0;
+}
+
+.stars {
+  float: right;
+}
+.star::before{
+  content: '\2606';
+  cursor: pointer;
+}
+.star:hover::before{
+  content: '\2605';
+  color: #bada55;
+}
+.star.rated::before{
+  content: '\2605';
+}
+
+/*.rating {
   unicode-bidi: bidi-override;
   direction: rtl;
 }
@@ -174,7 +195,7 @@ article.genre-container {
   position: absolute;
   left: 0;
   color: gold;
-}
+}*/
 
 #add-post-button {
   position: fixed;
