--- a/style.css
+++ b/style.css
@@ -98,6 +98,50 @@ a:hover {
   outline: none;
 }
 
+.cost-content {
+  display: flex;
+  flex-wrap: wrap;
+  float: right;
+  padding: 10px;
+  background-color: white;
+  border-color: white;
+  height: 400px;
+  border: 5px solid;
+  border-color: black;
+}
+
+.dice {
+  display: flex;
+  flex-wrap: wrap;
+  float: right;
+  padding: 10px;
+  background-color: white;
+  border-color: white;
+  height: 400px;
+  border: 5px solid;
+  border-color: black;
+}
+
+button {
+  background-color: rgb(82, 186, 179);
+  border-radius: 6px;
+  border: none;
+  color: rgb(255, 255, 255);
+  padding: 10px;
+  text-transform: uppercase;
+  width: 200px;
+  cursor: pointer;
+}
+#placeholder {
+  height: 100px;
+  width: 100px;
+  padding: 50px;
+  margin: 50px auto;
+  border: 1px solid gray;
+  border-radius: 10px;
+  font-size:80px;
+}
+
 .genre-container {
   display: flex;
   float: left;
