--- a/style.css
+++ b/style.css
@@ -98,16 +98,26 @@ a:hover {
   outline: none;
 }
 
-.cost-content {
+/****************************************************/
+/**********working on state costs********************/
+.go-container {
   display: flex;
   flex-wrap: wrap;
-  float: right;
+  float: none;
   padding: 10px;
   background-color: white;
   border-color: white;
-  height: 400px;
   border: 5px solid;
   border-color: black;
+}
+
+article.go-container{
+  margin: 10px;
+}
+
+.go-container ul li {
+  width: 20em;
+  float: left;
 }
 
 .dice {
@@ -117,9 +127,13 @@ a:hover {
   padding: 10px;
   background-color: white;
   border-color: white;
-  height: 400px;
+  flex-direction: column;
   border: 5px solid;
   border-color: black;
+}
+
+div.dice{
+  margin: 10px;
 }
 
 button {
@@ -142,6 +156,15 @@ button {
   font-size:80px;
 }
 
+#genre-output-placeholder{
+  height: 30px;
+  width: 200px;
+  border-color: black;
+  border-style: solid;
+  border-width: thin;
+  border-radius: 6px;
+}
+
 .genre-container {
   display: flex;
   float: left;
@@ -151,8 +174,9 @@ button {
   border: 10px solid;
   border-color: black;
   border-color: white;
-  height: 400px;
+  /*height: 800px;*/
 }
+
 
 article.genre-container {
   margin: 10px;
@@ -390,7 +414,7 @@ article.genre-container {
   text-align: center;
 }
 
-.error-conteriner h2 {
+.error-container h2 {
   margin: 10px 0;
   font-size: 96px;
   font-weight: 100;
