--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,1 +1,5 @@
-<h1>404 - Site is not found</h1>
+<main class="error-page">
+  <h2>404</h2>
+  <h3>Ummm... You're looking for something that doesn't actually exist</h3>
+  <img src="https://i.ytimg.com/vi/9T0YaxNks4c/maxresdefault.jpg" alt="Blowing up things">
+</main>
