--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,3 +1,4 @@
+<!---ERROR PAGE handlebars--->
 <main class="error-page">
   <h2>404</h2>
   <h3>Ummm... You're looking for something that doesn't actually exist</h3>
