--- a/views/partials/modal.handlebars
+++ b/views/partials/modal.handlebars
@@ -1,3 +1,4 @@
+<!---Modal button to go on all of the genre pages--->
 <button type="button" id="add-post-button"><i class="fas fa-film"></i></button>
 <div id="modal-backdrop" class="hidden"></div>
     <div id="create-post-modal" class="hidden">
