--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,14 +1,13 @@
+<!---HEADER handlebars--->
 <header>
   <h1 class="site-title">Movie Mania</h1>
 </header>
 
+<!---Navbar with no search bar--->
 <nav class="navbar">
   <ul class="navbar">
     <li class="navitem"><a href="/">Home</a></li>
     <li class="navitem"><a href="/Best">Best</a></li>
     <li class="navitem"><a href="/Recommended">Recommended</a></li>
-    <li class="navitem navbar-search">
-      <input type="text" id="navbar-search-input" placeholder="Search...">
-      <button type="button" id="navbar-search-button"><i class="fas fa-eye"></i></button>
   </ul>
 </nav>
