--- a/views/partials/singlePost.handlebars
+++ b/views/partials/singlePost.handlebars
@@ -1,3 +1,4 @@
+<!---The template for creating a new post if you so desire--->
 <article class="post">
 	<div class="post-icon">
 		<i class="fas fa-film"></i>
